montando o schema de departamento
